--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,14 +23,14 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    #twitter:         <username>
-    #github:          <username>
-    email:           mailto:<souryavarenya@gmail.com>
+    twitter:         kssouryavarenya
+    github:          souryavarenya
+    # email:           mailto:<souryavarenya@gmail.com>
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:        sourya.varenya.5
     # google:          <number>
     # vk:              <username>
-    youtube:         <string_string_string>
+    youtube:         UCozfCjZVB5Q-45RzGnrb6lg
     # vimeo:           <username>
     # vine:            <username>
     # spotify:         <user>/<number>
