--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -91,7 +91,7 @@
     awards:              Awards
     awards_title:        <!--title--> from <!--awarder-->
     publications:        Publications
-    publications_title:  <!--name--> by <!--publisher-->
+    publications_title:  <!--name-->  <!--publisher-->
     references:          References
     languages:           Languages
     fluency:             Fluency
