--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     Hey there! I am Sourya, a senior undergrad at Indian Institute of Technology Madras. I will be graduating as a Mechanical Engineer in June 2018.
-    I love tech and cats. In case you are curious, I am single. I specialize in rehabilitative robotics and manipulators.
+    I love tech and cats. I specialize in rehabilitative robotics and manipulators.
 
   # This photo will be used in the about section
   picture:
