--- a/_config.yml
+++ b/_config.yml
@@ -52,13 +52,15 @@ paginate_path:         /blog/page-:num/
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://qwtel.com/hydejack/docs/configuration/>
-google_fonts:          Roboto+Slab:700|Noto+Sans:400,400i,700,700i
+#google_fonts:          Roboto+Slab:700|Noto+Sans:400,400i,700,700i
+google_fonts:          Lato:400,400i,700,700i
+
 
 # The text font. Expects a string that is a valid CSS font-family value.
-font:                  "'Noto Sans', Helvetica, Arial, sans-serif"
+font:                  "'Lato', Helvetica, Arial, sans-serif"
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
-font_heading:          "'Roboto Slab', Helvetica, Arial, sans-serif"
+font_heading:          "'Lato', Helvetica, Arial, sans-serif"
 
 # Fallback image and color
 accent_image:          /assets/img/sidebar-bg.jpg
