--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Welcome to my webpage!
+  Welcome to my Webpage!
 
 # A list of keywords for your blog, will be used as fallback
 # for pages that don't have `keywords` in their front matter.
